--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site Settings
-name: Jekflix
-title: Jekflix | A blog theme for Jekyll
-description: Jekflix is a template for Jekyll inspired by Netflix and made by
-  Thiago Rossener.
+name: Etoile_xx
+title: Etoile_xx | An intersting tech-blog
+description: Etoile_xx.
 tags:
   - blog
   - template
@@ -30,12 +29,6 @@ formspree_form_id: formspree_form_id
 # Social Media Settings
 # Remove the item if you don't need it
 github_username: Etoile_xx
-facebook_username: facebook_username
-twitter_username: twitter_username
-instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
-
 
 # Posts Settings
 show_time_bar: true
