--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ github_username: Etoile_xx
 show_time_bar: false
 show_modal_on_exit: false
 show_modal_on_finish_post: true
-two_columns_layout: false
+two_columns_layout: true
 
 # Advanced Settings
 baseurl: "" # the subpath of your site, e.g. /blog
