--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ formspree_form_id: formspree_form_id
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: Etoile_xx
+github_username: etoilexx
 
 # Posts Settings
 show_time_bar: false
